# Petroledger

./: .gitignore  README.md  render.yaml  start_backend.command  vercel.json
backend/: .env.example  .gitignore  Dockerfile  Procfile  alembic.ini  pyproject.toml  render.yaml
backend/app/: main.py
backend/app/core/: config.py  email.py  exceptions.py  logging.py  rate_limit.py  security.py  security_headers.py  tenant.py  tenant_lock_cache.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  access_request.py  assignments.py  audit.py  contact_submission.py  daily_consolidation.py  fms.py  inventory.py  maintenance.py  nozzle_meter_reading.py  nozzle_shift_sale.py  organization.py  pump.py  reconciliation.py  shift.py  tenant.py  transaction.py  user.py  worker.py
backend/app/schemas/: __init__.py  access_request.py  assignments.py  fms.py  ingestion.py  meter_reading.py  organization.py  pump.py  reconciliation.py  shift.py  tenant.py  transaction.py  user.py  worker.py
backend/app/services/: audit.py  auth.py  deduplication.py  normalization.py  otp.py  password_reset.py  storage.py
backend/app/tasks/: celery_app.py  ingestion.py  reconciliation.py  reports.py
backend/app/utils/: __init__.py  datetime.py  hashing.py  pagination.py  shifts.py  token_blacklist.py  validators.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  002_add_content_hashes.py  003_add_audit_log.py  004_fix_content_hash_unique.py  005_add_prd_columns.py  006_create_fms_transactions.py  007_create_pos_batch_settlements.py  008_create_fleet_transactions.py  009_create_cash_entries.py  010_create_nozzle_assignments.py  011_create_anomaly_flags.py  012_users_org_id_nullable.py  013_create_tenants_table.py  014_add_tenant_id_to_core_tables.py  015_add_nozzle_meter_readings_and_shift_sales.py  016_add_soft_delete_to_workers_and_pumps.py  017_fix_deduplication_scope.py  018_worker_deleted_reason_and_fk_restrict.py  019_pump_deleted_reason_and_fk_restrict.py  020_user_oauth_fields.py  021_user_otp_fields.py  022_user_reset_token.py  024_audit_log_ip_address.py  025_soft_delete_remaining_entities.py  026_reconciliation_grade_breakdown.py  028_daily_consolidation.py  029_variance_reason.py  (+9 more)
backend/scripts/: provision_superadmin.py  reset_db.py  seed_dev_portal.py  seed_superadmin.py
backend/tests/: conftest.py  test_meter_readings.py
ml/: =0.9  (+4 more)
(+190 files in other folders)
