[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "petroledger-backend"
version = "0.1.0"
description = "PetroLedger — Petrol pump reconciliation engine"
requires-python = ">=3.11"

dependencies = [
  # Web framework
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",

  # Database
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "asyncpg>=0.29.0",
  "aiosqlite>=0.20.0",

  # Auth
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.9",
  "google-auth>=2.28.0",
  "slowapi>=0.1.9",

  # Cache & task queue
  "redis>=5.0.0",
  "celery[redis,beat]>=5.3.0",

  # ML / data
  "scikit-learn>=1.4.0",
  "xgboost>=2.0.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",

  # OCR / parsing
  "pytesseract>=0.3.10",
  "Pillow>=10.0.0",
  "boto3>=1.34.0",

  # Reports
  "jinja2>=3.1.0",
  "weasyprint>=62.0",
  "openpyxl>=3.1.0",

  # Utils
  "pydantic[email]>=2.7.0",
  "pydantic-settings>=2.2.0",
  "email-validator>=2.0.0",
  "structlog>=24.1.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "tenacity>=8.3.0",
  "orjson>=3.10.0",

  # Observability
  "prometheus-fastapi-instrumentator>=7.0.0",

  # Production WSGI/ASGI server
  "gunicorn>=22.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "factory-boy>=3.3.0",
  "pytest-env>=1.1.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "pre-commit>=3.7.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = [
  "E501",  # Line too long (handled by formatter)
  "B008",  # Function call in default argument (required for FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
env = [
  "DATABASE_URL=sqlite+aiosqlite:///./test.db",
  "SECRET_KEY=test-secret-key-32-chars-longggg",
  "ENVIRONMENT=test",
  "REDIS_URL=redis://localhost:6379/1",
  "SUPERADMIN_EMAIL=test-superadmin@example.com",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "migrations/*"]